--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lucide-react": "^0.564.0",
     "react-dom": "^19.2.4",
     "@google/genai": "^1.41.0",
-    "react": "^19.2.4",
-    "next": "^16.1.6"
+    "react": "^19.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
